# theclaw

./: .gitignore  Cargo.toml  README.md  build.rs  buildandroid.bat  local.properties  settings.gradle
.cargo/: config.toml
.github/workflows/: rust.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/net/ciderpunk/claw2/: MainActivity.java
armor/: clawship.arm
assets/data/ai/: dropship.aiconfig.json  mine.aiconfig.json
assets/models/: ship.glb  ship2.glb
assets/models - Copy/: ship2.glb  ship2.gltf
assets/shaders/: animated_uv_shader.wgsl  animated_uv_shader_v2.wgsl
models/: claw.blend  claw2.blend  claw2.glb  spark.blend  splosion.blend
src/: actions.rs  ai.rs  ai.rs.old  asset_loader.rs  bounds_check.rs  bullet.rs  camera.rs  collision_detection.rs  constants.rs  dropship.rs  effect_sprite.rs  enemy.rs  game_manager.rs  game_ui.rs  health.rs  health_bars.rs  hit_marker.rs  hook.rs  input.rs  lib.rs  main.rs  mine.rs  movement.rs  ordering.rs  scheduling.rs  ship.rs  sidewinder.rs  splosion.rs  state.rs  wreck.rs
wasm/: index.html
