[package]
name = "claw2"
version = "0.1.1"
edition = "2021"
description = "The Claw 2 - electric boogaloo"


[dependencies]
bevy =  "0.15.3"
rand = "0.8.5"
bevy_mod_billboard = { git = "https://github.com/voximity/bevy_mod_billboard.git"}

[lib]
name = "claw2_lib"
path = "src/lib.rs"
crate-type = [
    "staticlib",
    "cdylib",    # needed for Android
    "rlib",      # rlib needed for running locally
]

[[bin]]
name = "claw2"
path = "src/main.rs"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


