[package]
name = "claw2"
version = "0.1.2"
edition = "2021"
description = "The Claw 2 - electric boogaloo"


[dependencies]
bevy =  "0.16"
rand = "0.8.5"
strum = "0.27"
strum_macros = "0.27"

[lib]
name = "claw2"
path = "src/lib.rs"
crate-type = [
    "staticlib",
    "cdylib",    # needed for Android
    "rlib",      # rlib needed for running locally
]

[[bin]]
name = "claw2"
path = "src/main.rs"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


